compiler/tests/run_pass/region.lg
/* Copyright 2013 Stanford University and Los Alamos National Security, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

task foo(r: region<int>, p: int@r, x: int)
  : int
  , writes(r)
{
  let x = x + 1;
  *p = x;
  return x;
}

task bar(r: region<int>, p: int@r)
  : int
  , reads(r)
{
  return (*p) + 10;
}

task main()
{
  let r = region<int>(5);
  let p = new<int@r>();
  assert foo(r, p, 100) == 101;
  assert bar(r, p) == 111;
}
